# zupython

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
tests/: test_zupython.py
zupython/core/clients/: articles_client.py
zupython/core/clients/dtos/: artigos_dto.py  detalhe_artigo_dto.py
zupython/core/controllers/: importador_controller.py
zupython/core/controllers/dtos/: artigo_titulo_response_dto.py  artigos_response_dto.py
zupython/core/controllers/mappers/: artigo_mapper.py
zupython/core/database/: __init__.py  config.py
zupython/core/entities/: artigo.py
zupython/core/repositories/: artigo_repository.py
zupython/core/services/: artigo_service.py
